src/kubernetes/base/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: hello-kotlin-service
spec:
  ports:
    - name: tcp-node
      port: 8080
      targetPort: 8080
